--- a/EDISON.vcxproj.filters
+++ b/EDISON.vcxproj.filters
@@ -55,6 +55,24 @@
     <ClInclude Include="edge\BgImage.h">
       <Filter>edge</Filter>
     </ClInclude>
+    <ClInclude Include="preprocessing\PreProcessing.h">
+      <Filter>PreProcessing</Filter>
+    </ClInclude>
+    <ClInclude Include="preprocessing\AntiGeometricDiffusion.h">
+      <Filter>PreProcessing</Filter>
+    </ClInclude>
+    <ClInclude Include="preprocessing\RegionLabelling.h">
+      <Filter>PreProcessing</Filter>
+    </ClInclude>
+    <ClInclude Include="preprocessing\Utilities.h">
+      <Filter>PreProcessing</Filter>
+    </ClInclude>
+    <ClInclude Include="preprocessing\PostProcessing.h">
+      <Filter>PreProcessing</Filter>
+    </ClInclude>
+    <ClInclude Include="preprocessing\MSWrap.h">
+      <Filter>PreProcessing</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="prompt\edison.cpp">
@@ -102,6 +120,24 @@
     <ClCompile Include="edge\BgImage.cpp">
       <Filter>edge</Filter>
     </ClCompile>
+    <ClCompile Include="preprocessing\PreProcessing.cpp">
+      <Filter>PreProcessing</Filter>
+    </ClCompile>
+    <ClCompile Include="preprocessing\AntiGeometricDiffusion.cpp">
+      <Filter>PreProcessing</Filter>
+    </ClCompile>
+    <ClCompile Include="preprocessing\RegionLabelling.cpp">
+      <Filter>PreProcessing</Filter>
+    </ClCompile>
+    <ClCompile Include="preprocessing\Utilities.cpp">
+      <Filter>PreProcessing</Filter>
+    </ClCompile>
+    <ClCompile Include="preprocessing\PostProcessing.cpp">
+      <Filter>PreProcessing</Filter>
+    </ClCompile>
+    <ClCompile Include="preprocessing\MSWrap.cpp">
+      <Filter>PreProcessing</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="prompt">
@@ -112,6 +148,9 @@
     </Filter>
     <Filter Include="segm">
       <UniqueIdentifier>{d4f5eb29-06e9-4dee-854a-9098290a8376}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="PreProcessing">
+      <UniqueIdentifier>{49080ed9-ea05-4f07-8150-b73509313278}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
