--- a/EDISON.vcxproj
+++ b/EDISON.vcxproj
@@ -107,6 +107,11 @@
       <AdditionalLibraryDirectories>C:\development\projects\EDISON\thirdparty\opencv\lib\debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_core249d.lib;opencv_highgui249d.lib;opencv_imgproc249d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy .\thirdparty\opencv\dll\opencv_core249d.dll .\debug\
+copy .\thirdparty\opencv\dll\opencv_highgui249d.dll .\debug\
+copy .\thirdparty\opencv\dll\opencv_imgproc249d.dll .\debug\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -127,6 +132,17 @@
       <AdditionalLibraryDirectories>C:\development\projects\EDISON\thirdparty\opencv\lib\release</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_core249.lib;opencv_highgui249.lib;opencv_imgproc249.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy .\thirdparty\opencv\dll\opencv_core249.dll .\release\
+copy .\thirdparty\opencv\dll\opencv_highgui249.dll .\release\
+copy .\thirdparty\opencv\dll\opencv_imgproc249.dll .\release\
+
+copy .\thirdparty\opencv\dll\opencv_core249.dll .\bin\release\
+copy .\thirdparty\opencv\dll\opencv_highgui249.dll .\bin\release\
+copy .\thirdparty\opencv\dll\opencv_imgproc249.dll .\bin\release\
+
+copy .\release\EDISON.exe .\bin\release\</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
